# typing-test-tui

./: Cargo.toml  README.md
.github/workflows/: backend-pr-check.yml  pr-check.yml  publish-on-version-change.yml
backend/: go.mod  main.go  plan.md
backend/assets/: assets.go  english.json
backend/data_provider/: data_provider.go  errors.go
backend/handlers/hub/: errors.go  group.go  hub.go  hub_test.go
backend/handlers/hub/group/: group.go  group_test.go
backend/handlers/hub/user/: user.go  user_test.go
backend/models/: hub.go  interfaces.go  message.go
backend/services/data_provider/: data_provider.go  data_provider_test.go
src/: action.rs  args.rs  config.rs  endscreen.rs  lib.rs  main.rs  message.rs  model.rs  msg.rs  selection.rs  state.rs  toast.rs  typing_test.rs
src/data/: mod.rs
src/typing/: mod.rs  typing.rs
src/typing_test/: letter.rs  mod.rs  mode_selection.rs  selection.rs  word.rs
src/util/: config.rs  data_provider.rs  mod.rs  selection.rs  toast.rs
tui/: Cargo.toml  README.md
tui/assets/: quotes.json  script.sh
tui/src/: action.rs  lib.rs  main.rs  model.rs
tui/src/multiplayer/: mod.rs  models.rs
tui/src/singleplayer/: action.rs  endscreen.rs  mod.rs
tui/src/typing/: word.rs
tui/src/util/: config.rs  data_provider.rs
