[package]
name = "typing-test-tui"
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Typing speed test tui in rust"
repository = "https://github.com/mingli202/typing-test-tui"
authors = ["mingli202"]

[dependencies]
color-eyre = "0.6.5"
dirs = "6.0.0"
itertools = "0.14.0"
rand = "0.10.0"
ratatui = "0.30.0"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
