[package]
name = "typing-test-tui"
version = "0.1.6"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Typing speed test tui in rust"
repository = "https://github.com/mingli202/typing-test-tui"
authors = ["mingli202"]

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.32"
itertools = "0.14.0"
rand = "0.10.0"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
